--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lqip",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "Low Quality Image Placeholders (LQIP) Module for Node",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zouhir/lqip.git"
+    "url": "git+https://github.com/pmdevita/lqip.git"
   },
   "keywords": [
     "lqip",
@@ -23,9 +23,9 @@
   "author": "Zouhir Chahoud",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/zouhir/lqip/issues"
+    "url": "https://github.com/pmdevita/lqip/issues"
   },
-  "homepage": "https://github.com/zouhir/lqip#readme",
+  "homepage": "https://github.com/pmdevita/lqip#readme",
   "dependencies": {
     "jimp": "^0.16.1",
     "lodash.sortby": "^4.7.0",
